--- a/src/blocks/form/__link-introduce/form__link-intoduce.css
+++ b/src/blocks/form/__link-introduce/form__link-intoduce.css
@@ -1,6 +1,6 @@
-.form__link{
-    margin:0 0 0 5px;
-    text-decoration: none; 
+.form__link-introduce{
+    margin: 0;
+    padding: 0;
     font-size: 14px;
     font-weight: 400;
     line-height: 16.94px;
